--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docsify-cli",
-  "version": "4.3.0",
+  "name": "docsify-cli-patched",
+  "version": "4.3.1",
   "description": "A magical documentation generator.",
   "author": {
     "name": "qingwei-li",
@@ -31,11 +31,10 @@
     "connect": "^3.6.0",
     "connect-livereload": "^0.6.0",
     "cp-file": "^4.1.1",
-    "docsify": ">=3",
-    "docsify-server-renderer": ">=4",
+    "docsify-patched": "^4.9.5",
     "fs-extra": "^2.1.2",
     "get-port": "^4.1.0",
-    "livereload": "^0.7.0",
+    "livereload": "^0.8.2",
     "lru-cache": "^4.1.1",
     "opn": "^5.3.0",
     "serve-static": "^1.12.1",
